[package]
name = "rust-rpc"
version = "0.1.0"
authors = ["Animesh Sinha <animeshsinha1309@gmail.com>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = { version = "0.24", features = ["full"] }
clap = "2.33"
env_logger = "0.8"
futures = "0.3"
serde = { version = "1.0" }
tokio = { version = "1", features = ["full"] }

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
